docs(adr): amend 0005 — cut the ADDITIVE tier, body-only everywhere
The additive capability (JBR enhanced redefinition: added/removed
methods, new classes) is removed from the instant lane; BODY_ONLY and
all its verification machinery stay. Rationale in the new Amendment
section: the review-cost evidence (the silent-staleness P0s
concentrated in structural patching), the tier shipping dead for
Kotlin, the CRaC engine never being able to run JBR, and the JBR
agentic-baseline experiment (~12 s/session marginal value; JBR 21
accepts added members while advertising canAddMethod=false).

Protocol v4 is unreleased and is amended in place — no v5. The code
cut lands as its own commit on this branch.